Ensure proper namespacing with CSS and HTML classes

--- a/app/assets/stylesheets/content.css.scss
+++ b/app/assets/stylesheets/content.css.scss
@@ -1,15 +1,16 @@
 /***** CONTENT PAGE *****/
-.upload-form {
-  margin: 0 auto;
-  
-  .upload-picture-list {
-    .picture-list {
-      .picture-thumbnail {
-        img {
-          width: 30%;
+#content {
+  .upload-form {
+    margin: 0 auto;
+    
+    .upload-picture-list {
+      .picture-list {
+        .picture-thumbnail {
+          img {
+            width: 30%;
+          }
         }
       }
     }
   }
 }
-
