--- a/app/assets/stylesheets/create.css.scss
+++ b/app/assets/stylesheets/create.css.scss
@@ -1,1 +1,7 @@
 /***** CREATE PAGE *****/
+#create {
+  #create-explaination {
+    text-align: left;
+    font: 14px;
+  }
+}
